@@ -1,6 +1,7 @@
 nx-libs (2:3.5.0.17-0) UNRELEASED; urgency=low
 
-  * Continue development...
+  [ Jan Engelhardt ]
+  * Fix /bin/Makefile. Add $(DESTDIR) to every install path.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 Nov 2012 21:14:23 +0100
 
